Fixed steam icon & network username spacing

--- a/app/imports/ui/stylesheets/style.css
+++ b/app/imports/ui/stylesheets/style.css
@@ -98,7 +98,7 @@
 
 .description {
   padding-bottom: .3rem;
-  height: 70px;
+  height: 30px;
 }
 
 
